--- a/frontend/src/pages/searchPage/styles/searchPage.css
+++ b/frontend/src/pages/searchPage/styles/searchPage.css
@@ -74,13 +74,12 @@
 .park-popup {
   position: absolute;
   top: 0%;
-  left: 40rem;
+  left: 38.4rem;
   align-self:flex-start;
   transform: translateX(-50%);
   z-index: 15;
   background: white;
-  padding: 20px;
-  padding-top: 0px;
+  padding: 0px;
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0,0,0,0.2);
   width: 25rem;
